--- a/02_bootstrap/05_component.html
+++ b/02_bootstrap/05_component.html
@@ -176,7 +176,7 @@
 
 
   <!-- NavBar -->
-  <nav class="navbar navbar-expand-lg navbar-light badge-secondary fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-warning badge-secondary fixed-top">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
