--- a/00_html/03_markup.html
+++ b/00_html/03_markup.html
@@ -15,27 +15,26 @@
 </head>
 
 <body>
-  <!-- 헤더주지않고 h1으로 시작 -->
+  <!-- header 주지 않고 h1으로 시작 -->
   <h1>프로그래밍 교육</h1>
   <nav>
-    <!-- 같은 페이지 내 지점으로 이동하도록 -->
-    <a href="#python">
-      <img src="images/python.png" alt="python"/> <!--텍스트가 아닌 이미지가 와야 함 / alt 는 대체 텍스트 -->
+    <a href="#python"> <!-- 같은 페이지 내 지점으로 이동하도록 -->
+      <img src="images/python.png" alt="python" /> <!-- 텍스트가 아닌 이미지가 와야 함 / alt 는 대체 텍스트 -->
     </a>
     <a href="#web">
-      <img src="images/html.png" alt="html"/>
+      <img src="images/html.png" alt="html" />
     </a>
-    <a href="02_index.html">참고사이트</a> <!--상대경로 걸어주는 것-->
-    <a href="mailto:edujason.hphk@gmail.com">메일 보내기</a> <!--메일 작성-->
+    <a href="02_index.html">참고사이트</a> <!-- 상대경로 -->
+    <a href="mailto:edujason.hphk@gmail.com">메일 보내기</a>
   </nav>
-  <hr />
-  <!-- 줄 그어줌 -->
+  <hr /> <!-- 줄 그어줌 -->
 
   <header id="python">
     <h2>
       <a href="https://docs.python.org/ko/3/tutorial/index.html" target="_blank">파이썬</a>
     </h2>
   </header>
+
   <article>
     <h3>Number type</h3>
     <p>파이썬에서 숫자형은 아래와 같이 있다. </p>
@@ -45,7 +44,6 @@
       <li>complex</li>
       <li><del>str</del></li>
     </ol>
-
     <h3>Sequence</h3>
     <p>파이썬에서 시퀀스는 아래와 같이 있다. </p>
     <p><strong>시퀀스는 for문을 돌릴 수 있다!</strong></p>
@@ -56,9 +54,7 @@
       <li>range</li>
     </ol>
   </article>
-
   <hr />
-  <!--줄 그어줌 -->
 
   <header id="web">
     <h2>
@@ -73,7 +69,8 @@
       <li style="list-style-type: circle">CSS</li>
     </ul>
     <!-- 유투브 영상 넣기 : html 안에 다른 화면을 이식시킨다.  -->
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/F5Bg1SMQQ1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/F5Bg1SMQQ1s" frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </article>
 
 </body>
