Review web-basic

--- a/00_html/04_lunch.html
+++ b/00_html/04_lunch.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lunch</title>
-  <!-- <style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lunch</title>
+    <!-- <style>
     th {
       border: 1px solid blue;
     }
   </style> -->
-</head>
+  </head>
 
-<body>
-  <!-- 테이블 만들 때 최상단에 table 태그 필요 -->
-  <table border="1px solid black">
-    <!-- 가로줄부터 만들기 -->
-    <tr>
-      <!-- 가장 첫번째 줄 네개의 공간 만들기 -->
-      <th></th>
-      <th>월</th>
-      <th>화</th>
-      <th>수</th>
-    </tr>
-    <tr>
-      <td>A코스</td>
-      <td rowspan="2">짬뽕</td>
-      <td colspan="2">초밥</td>
-    </tr>
-    <tr>
-      <td>B코스</td>
-      <td>김치찌개</td>
-      <td>삼계탕</td>
-    </tr>
-
-  </table>
-</body>
-
+  <body>
+    <!-- 테이블 만들 때 최상단에 table 태그 필요 -->
+    <table border="1px solid black">
+      <!-- 가로줄부터 만들기 -->
+      <tr>
+        <!-- 가장 첫번째 줄 네개의 공간 만들기 -->
+        <th></th>
+        <th>월</th>
+        <th>화</th>
+        <th>수</th>
+      </tr>
+      <tr>
+        <td>A코스</td>
+        <td rowspan="2">짬뽕</td>
+        <td colspan="2">초밥</td>
+      </tr>
+      <tr>
+        <td>B코스</td>
+        <td>김치찌개</td>
+        <td>삼계탕</td>
+      </tr>
+    </table>
+  </body>
 </html>
