--- a/00_html/02_index.html
+++ b/00_html/02_index.html
@@ -1,93 +1,89 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Hi, HTML</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hi, HTML</title>
-</head>
+  <body>
+    <!-- Heading -->
+    <h1>Hi, h1!</h1>
+    <h2>Hi, h2!</h2>
+    <h3>Hi, h3!</h3>
+    <h4>Hi, h4!</h4>
+    <h5>Hi, hi!</h5>
+    <h6>Hi, h6!</h6>
 
-<body>
-  <!-- Heading -->
-  <h1>Hi, h1!</h1>
-  <h2>Hi, h2!</h2>
-  <h3>Hi, h3!</h3>
-  <h4>Hi, h4!</h4>
-  <h5>Hi, hi!</h5>
-  <h6>Hi, h6!</h6>
+    <!-- bold -->
+    <div>
+      <b>This is bold.</b>
+      <strong>This is strong. (semantic) </strong>
+    </div>
 
-  <!-- bold -->
-  <div>
-    <b>This is bold.</b>
-    <strong>This is strong. (semantic) </strong>
-  </div>
+    <!-- italic -->
+    <div>
+      <i>This is italic.</i>
+      <em>This is em. (semantic)</em>
+      <!-- emphasized -->
+    </div>
 
-  <!-- italic -->
-  <div>
-    <i>This is italic.</i>
-    <em>This is em. (semantic)</em> <!-- emphasized -->
+    <!--highlighted -->
+    <h2>This is <mark>Mark</mark>.</h2>
 
-  </div>
+    <!-- del / ins -->
+    <h2>This is <del>del</del>.</h2>
+    <h2>This is <ins>ins</ins>.</h2>
 
-  <!--highlighted -->
-  <h2>This is <mark>Mark</mark>.</h2>
+    <!-- sub / sup -->
+    <h2>This is <sub>sub</sub>.</h2>
+    <h2>This is <sup>sup</sup>.</h2>
 
-  <!-- del / ins -->
-  <h2>This is <del>del</del>.</h2>
-  <h2>This is <ins>ins</ins>.</h2>
+    <!-- br tag - 개행문자 대신 사용 가능. self closing 하기도 함-->
+    <p>
+      This is p tag.<br />
+      This is p tag.<br />
+      This is p tag.
+    </p>
 
-  <!-- sub / sup -->
-  <h2>This is <sub>sub</sub>.</h2>
-  <h2>This is <sup>sup</sup>.</h2>
-
-  <!-- br tag - 개행문자 대신 사용 가능. self closing 하기도 함-->
-  <p>
-    This is p tag.<br />
-    This is p tag.<br />
-    This is p tag.
-  </p>
-
-  <!-- pre  -->
-  <!-- 여기에 적은 그대로 작성됨  -->
-  <pre>
+    <!-- pre  -->
+    <!-- 여기에 적은 그대로 작성됨  -->
+    <pre>
   from flask import Flask
   app = Flask(__name__)
 
   @app.route('/')
   def hello():
       return 'Hello, world'
-</pre>
+</pre
+    >
 
-  <!-- hr -->
-  <!-- 줄을 그어준다 -->
-  <hr />
+    <!-- hr -->
+    <!-- 줄을 그어준다 -->
+    <hr />
 
-  <!-- q / blockquote -->
-  <!-- 인용문 쓸 때 사용 -->
-  <p>
-    Jason said, <q>May you Happy Hacking.</q>
-  </p>
-  <!-- 인용문이 나오는 블록 생성  -->
-  <blockquote>
-    May you have Happy Hacking.
-  </blockquote>
+    <!-- q / blockquote -->
+    <!-- 인용문 쓸 때 사용 -->
+    <p>Jason said, <q>May you Happy Hacking.</q></p>
+    <!-- 인용문이 나오는 블록 생성  -->
+    <blockquote>
+      May you have Happy Hacking.
+    </blockquote>
 
-  <!-- ol / ul / li -->
-  <!-- ordered list : 순서가 있는 리스트 -->
-  <ol>
-    <li>first</li>
-    <li>second</li>
-    <li>third</li>
-  </ol>
-  <!-- 순서가 없는 리스트 -->
-  <!-- 각각의 리스트는 li 태그로 존재  -->
-  <ul>
-    <li>first</li>
-    <li>second</li>
-    <li>third</li>
-  </ul>
-
-</body>
-
+    <!-- ol / ul / li -->
+    <!-- ordered list : 순서가 있는 리스트 -->
+    <ol>
+      <li>first</li>
+      <li>second</li>
+      <li>third</li>
+    </ol>
+    <!-- 순서가 없는 리스트 -->
+    <!-- 각각의 리스트는 li 태그로 존재  -->
+    <ul>
+      <li>first</li>
+      <li>second</li>
+      <li>third</li>
+    </ul>
+  </body>
 </html>
