--- a/00_html/07_subway.html
+++ b/00_html/07_subway.html
@@ -1,50 +1,57 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Subway Order Form</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Subway Order Form</title>
-</head>
+  <body>
+    <h1>FORM</h1>
+    <p>주문서를 작성하여 주십시오.</p>
 
-<body>
-  <h1>FORM</h1>
-  <p>주문서를 작성하여 주십시오.</p>
+    <form action="">
+      <!-- form 으로 감싸는 부분 -->
+      이름: <input type="text" placeholder="이름을 입력해주세요 " /><br />
+      날짜: <input type="date" value="2019-08-01" name="orderDate" />
 
-  <form action=""> <!-- form 으로 감싸는 부분 -->
-    이름: <input type="text" placeholder="이름을 입력해주세요 "><br />
-    날짜: <input type="date" value="2019-08-01" name="orderDate">
+      <h3>1. 샌드위치 선택</h3>
+      <input type="radio" name="option" value="1" />에그 마요<br />
+      <input type="radio" name="option" value="1" />이탈리안 비엠티<br />
+      <input type="radio" name="option" value="1" />터키 베이컨 아보카도<br />
+      <hr />
 
-    <h3>1. 샌드위치 선택</h3>
-    <input type="radio" name="option" value="1">에그 마요<br />
-    <input type="radio" name="option" value="1">이탈리안 비엠티<br />
-    <input type="radio" name="option" value="1">터키 베이컨 아보카도<br />
-    <hr />
+      <h3>2. 사이즈 선택</h3>
+      <input
+        type="number"
+        value="15"
+        min="15"
+        ,
+        max="30"
+        step="15"
+        name="size"
+      />
+      <hr />
 
-    <h3>2. 사이즈 선택</h3>
-    <input type="number" value="15" min="15", max="30" step="15" name="size">
-    <hr />
+      <h3>3. 빵</h3>
+      <select name="bread">
+        <!-- select는 선택할 수 있는 option이 따라온다. -->
+        <option value="1" selected>허니오트</option>
+        <option value="2" disabled>플랫브레드</option>
+        <option value="3">하티 이탈리안</option>
+      </select>
+      <hr />
 
-    <h3>3. 빵</h3>
-    <select name="bread"> <!-- select는 선택할 수 있는 option이 따라온다. -->
-      <option value="1" selected>허니오트</option>
-      <option value="2" disabled>플랫브레드</option>
-      <option value="3">하티 이탈리안</option>
-    </select>
-    <hr />
+      <h3>4. 야채/소스</h3>
+      <input type="checkbox" name="option" value="1" />토마토<br />
+      <input type="checkbox" name="option" value="2" />오이<br />
+      <input type="checkbox" name="option" value="3" />할라피뇨<br />
+      <input type="checkbox" name="option" value="4" />핫 칠리<br />
+      <input type="checkbox" name="option" value="5" />바베큐<br />
+      <br />
 
-    <h3>4. 야채/소스</h3>
-    <input type="checkbox" name="option" value="1">토마토<br />
-    <input type="checkbox" name="option" value="2">오이<br />
-    <input type="checkbox" name="option" value="3">할라피뇨<br />
-    <input type="checkbox" name="option" value="4">핫 칠리<br />
-    <input type="checkbox" name="option" value="5">바베큐<br />
-    <br />
-
-    <input type="submit" value="๑ŐεŐ๑ 제출 ๑ŐεŐ๑ " />
-  </form>
-
-</body>
-
+      <input type="submit" value="๑ŐεŐ๑ 제출 ๑ŐεŐ๑ " />
+    </form>
+  </body>
 </html>
